plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.1'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group = 'com.interswitchgroup'
version = '0.0.1'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.0.4'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'com.auth0:java-jwt:4.0.0'
	implementation 'org.apache.poi:poi:5.2.2'
	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.2'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.1.jre8'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

jar{
	manifest {
		attributes(
				'Main-Class': 'com.interswitchgroup.tx_user_portal.TxUserPortalApplication'
		)
	}
}

